[workspace.package]
authors = ["Hadi Saleh <hadi@creatoros.co>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[package]
name = "reclaim-gear"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
reclaim-io.workspace = true
sha2 = {version = "0.10.6", default-features = false}
sha3 = { version = "0.10.8",  default-features = false}
hex = {version = "0.4.3", default-features = false, features=["alloc"]}
ecdsa = {version = "0.16.9", default-features = false}
keccak-hash = {version = "0.10.0", default-features = false}

k256 = {version = "0.13.3", default-features = false, features = ["ecdsa-core", "ecdsa", "sha256","schnorr"]}
rand_core ={version = "0.6.4", default-features = false}
digest = {version = "0.10", default-features = false }

[build-dependencies]
gear-wasm-builder.workspace = true
reclaim-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
members = ["xtask"]

[workspace.dependencies]
gstd = "1.3.0"
gmeta = "1.3.0"
gear-wasm-builder = "1.3.0"
gtest = "1.3.0"
gclient = "1.3.0"
reclaim-io.path = "io"
tokio = "1"
xshell = "0.2"
anyhow = "1"
